[package]
name = "bqn-safetensors"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "bqn_safetensors"
crate-type = ["cdylib"]

[dependencies]
cbqn-sys = "0.2.0"
half = "2.3.1"
memmap2 = "0.9.0"
safetensors = "0.4.0"
widestring = "1.0.2"
